src/test/deca/syntax/invalid/class/decl_visibility_dans_main.deca
/*
	Description: declaration une visibility dans main

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



{
	

	protected int z= 23;


}
